--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,32 @@ body {
   font-family: 'Mona Sans';
   src: url('./lib/fonts/Mona-Sans.ttf');
 }
+
+.hover-underline-animation {
+  display: flex;
+  position: relative;
+  color: white;
+}
+
+.hover-underline-animation::after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  transform: scaleX(0);
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: white;
+  transform-origin: bottom right;
+  transition: transform 0.25s ease-out;
+}
+
+.hover-underline-animation:hover::after {
+  transform: scaleX(1);
+  transform-origin: bottom left;
+}
+
+.did-you-know-section {
+  background-image: url('./lib/media/section-assets/bg-stars-1.webp');
+  background-size: cover;
+}
