--- a/src/index.css
+++ b/src/index.css
@@ -10,11 +10,13 @@ body {
   @apply bg-gh-primary font-product;
 }
 
+/* importing local font  */
 @font-face {
   font-family: 'Mona Sans';
   src: url('./lib/fonts/Mona-Sans.ttf');
 }
 
+/* link underline animation style */
 .hover-underline-animation {
   display: flex;
   position: relative;
@@ -39,7 +41,40 @@ body {
   transform-origin: bottom left;
 }
 
+/* did-you-know section: stars/space BG image render */
+
 .did-you-know-section {
   background-image: url('./lib/media/section-assets/bg-stars-1.webp');
   background-size: cover;
+}
+
+/* effect-container: gradient cursor follow style */
+.effect-container {
+  @apply relative overflow-hidden bg-gh-blocks w-full;
+  @apply cursor-default;
+}
+
+.effect-container > .effect-container-content-wrapper {
+  @apply relative;
+}
+
+.effect-container::before {
+  --size: 0;
+  content: '';
+  position: absolute;
+  left: var(--x);
+  top: var(--y);
+  width: var(--size);
+  height: var(--size);
+  background: radial-gradient(circle closest-side, #7ee787, #7ee78750);
+  transform: translate(-50%, -50%);
+  /* transition: width 0.2s ease, height 0.2s ease; */
+  transition: opacity 1.2s cubic-bezier(0.16, 1, 0.3, 1);
+  mix-blend-mode: soft-light;
+  will-change: transform;
+  filter: blur(180px);
+}
+
+.effect-container:hover::before {
+  --size: 800px;
 }
